[gd_scene load_steps=2 format=3 uid="uid://hull_select_001"]

[ext_resource type="Script" path="res://scripts/hull/HullSelect.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/hull/components/HullCard.tscn" id="2"]

[node name="HullSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.101961, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "SELECT HULL TYPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HullCards" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -580.0
offset_top = -200.0
offset_right = 580.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="FrigateCard" parent="HullCards" instance=ExtResource("2")]
layout_mode = 2

[node name="CruiserCard" parent="HullCards" instance=ExtResource("2")]
layout_mode = 2

[node name="BattleshipCard" parent="HullCards" instance=ExtResource("2")]
layout_mode = 2
